--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@ashish1500616/npm",
   "version": "1.0.0",
-  "description": "",
+  "description": "learning how to use npm.",
   "main": "index.js",
   "scripts": {
     "test": "node test.js"
@@ -10,5 +10,14 @@
   "license": "ISC",
   "dependencies": {
     "@linclark/pkg": "^1.0.3"
-  }
+  },
+  "devDependencies": {},
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/www.github.com/np.git"
+  },
+  "bugs": {
+    "url": "https://github.com/www.github.com/np/issues"
+  },
+  "homepage": "https://github.com/www.github.com/np#readme"
 }
